# WirelessWagon

./: .gitignore  README.md
00-Docs/00-Notes/: notes.md  notes.txt
00-HC05/: 00-HC05.ino
01-Android/00-RSSITestApp/app/: build.gradle
01-Android/00-RSSITestApp/app/src/main/: AndroidManifest.xml
01-Android/00-RSSITestApp/app/src/main/java/com/example/wirelesswagon/: DataRunnable.java
01-Android/00-RSSITestApp/app/src/main/res/layout/: activity_main.xml
01-Android/00-RSSITestApp/app/src/main/res/values-night/: themes.xml
01-Android/01-GPS_TestApp/: settings.gradle
01-Android/01-GPS_TestApp/app/: build.gradle
01-Android/01-GPS_TestApp/app/src/androidTest/java/com/example/gpstestapp/: ExampleInstrumentedTest.java
01-Android/01-GPS_TestApp/app/src/main/: AndroidManifest.xml
01-Android/01-GPS_TestApp/app/src/main/java/com/example/gpstestapp/: MainActivity.java
01-Android/01-GPS_TestApp/app/src/main/res/values/: strings.xml  themes.xml
01-Android/01-GPS_TestApp/app/src/main/res/values-night/: themes.xml
01-Android/01-GPS_TestApp/app/src/test/java/com/example/gpstestapp/: ExampleUnitTest.java
01-Android/01-GPS_TestApp/gradle/wrapper/: gradle-wrapper.properties
01-App/: settings.gradle
01-App/app/src/androidTest/java/com/example/wirelesswagon/: ExampleInstrumentedTest.java
01-App/app/src/main/: AndroidManifest.xml
01-App/app/src/main/java/com/example/wirelesswagon/: MainActivity.java
01-App/app/src/main/res/layout/: activity_main.xml
01-App/app/src/main/res/values/: strings.xml  themes.xml
01-App/app/src/test/java/com/example/wirelesswagon/: ExampleUnitTest.java
01-App/gradle/wrapper/: gradle-wrapper.properties
01-Code/00-pico/: CMakeLists.txt  fetch_desousa_pico.cmake  fetch_micro_tools.cmake  main.c
01-Code/00-pico/Ex01-Accuracy/: CMakeLists.txt  main.c
01-Code/00-pico/LatLongAccur/: CMakeLists.txt  main.c
01-Code/00-pico/ZEDF9P/: CMakeLists.txt  ZEDF9P.c  ZEDF9P.h
01-Code/00-pico/includes/ZEDF9P/: ZED-F9P.c  ZED-F9P.h
01-Code/00-pico/includes/pico/: .base.c.swp  base.c  base.h
01-Code/00-pico/picoLibs/: CMakeLists.txt  custom_pico.c  custom_pico.h
02-Schema/HC05ArduinoSchematic/: HC05ArduinoSchematic-cache.lib  HC05ArduinoSchematic.net  HC05ArduinoSchematic.pro  HC05ArduinoSchematic.sch  HC05ArduinoSchematic.sch-bak
